<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2E5">

    <TextView
        android:id="@+id/west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/west"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/longField"
        app:layout_constraintStart_toEndOf="@+id/longField"
        app:layout_constraintTop_toTopOf="@+id/longField" />

    <EditText
        android:id="@+id/latField"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/latHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/locationLabel"
        app:layout_constraintStart_toEndOf="@+id/locationLabel"
        app:layout_constraintTop_toTopOf="@+id/locationLabel" />

    <EditText
        android:id="@+id/longField"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/longHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/locationLabel"
        app:layout_constraintStart_toEndOf="@+id/north"
        app:layout_constraintTop_toTopOf="@+id/locationLabel" />

    <EditText
        android:id="@+id/methodField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/methodHint"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/methodLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/methodLabel"
        app:layout_constraintTop_toTopOf="@+id/methodLabel" />

    <TextView
        android:id="@+id/text_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/common_name"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Species"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genusLabel" />

    <TextView
        android:id="@+id/genusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Genus"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/familyLabel" />

    <TextView
        android:id="@+id/familyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/Family"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/methodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/Method"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesLabel" />

    <TextView
        android:id="@+id/north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/north"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/latField"
        app:layout_constraintStart_toEndOf="@+id/latField"
        app:layout_constraintTop_toTopOf="@+id/latField" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Location"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/methodLabel" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Date"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

    <TextView
        android:id="@+id/notesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/Notes"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textCapWords"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <EditText
        android:id="@+id/speciesField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/speciesHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/speciesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/speciesLabel"
        app:layout_constraintTop_toTopOf="@+id/speciesLabel" />

    <EditText
        android:id="@+id/genusField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/genusHint"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/genusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genusLabel"
        app:layout_constraintTop_toTopOf="@+id/genusLabel" />

    <EditText
        android:id="@+id/familyField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:hint="@string/familyHint"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/familyLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/familyLabel"
        app:layout_constraintTop_toTopOf="@+id/familyLabel" />

    <EditText
        android:id="@+id/dateField"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toTopOf="@+id/dateLabel" />

    <EditText
        android:id="@+id/notesField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#25371d"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notesHint"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textColorHighlight="#25371d"
        android:textColorLink="#25371d"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/notesLabel"
        app:layout_constraintTop_toBottomOf="@+id/notesLabel" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:background="#25371d"
        android:text="@string/save"
        android:textColor="#F0F2E5"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:background="#25371d"
        android:text="@string/clear"
        android:textColor="#F0F2E5"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/dateField"
        app:layout_constraintStart_toEndOf="@+id/dateField"
        app:layout_constraintTop_toTopOf="@+id/dateField"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>